# tagger

./: README.md  pyproject.toml
src/: main.py
src/tagging/: main.py  utils.py
src/tagging/models/: base.py  condition.py  tag_rules.py
